test/library/standard/Types/copyable-sync-string.good
copyable-sync-string.chpl:3: error: isCopyableType(sync string) = true
