test/library/standard/Types/copyable-sync-string.bad
$CHPL_HOME/modules/standard/Types.chpl:250: warning: Initializing a type-inferred variable from a 'sync' is deprecated; apply a 'read??()' method to the right-hand side
copyable-sync-string.chpl:3: error: isCopyableType(sync string) = true
